--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "react": "^19.2.4",
-    "@google/genai": "^1.38.0",
     "react-dom": "^19.2.4",
-    "lucide-react": "^0.563.0"
+    "lucide-react": "^0.563.0",
+    "@google/genai": "^1.38.0",
+    "vite": "^6.2.0",
+    "@vitejs/plugin-react": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "typescript": "~5.8.2"
   }
 }
